Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-2605

TSocket warning on gcc 4.8.3

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.9.2
    • C++ - Library
    • None
    • Patch Available

    Description

      thrift/lib/cpp/src/thrift/transport/TSocket.cpp:256:36: warning: missing initializer for member 'sockaddr_un::sun_path' [-Wmissing-field-initializers]
           struct sockaddr_un address = {0}; 

      same in TServerSocket

      Attachments

        1. THRIFT-2605.patch
          2 kB
          Konrad Grochowski

        Activity

          People

            roger Roger Meier
            hcorg Konrad Grochowski
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: