THRIFT-2605 TSocket warning on gcc 4.8.3

Patch: Konrad Grochowski